Convert coords per touch point with full transforms.

It has long been known that the translation-only model for transforming
point coordinates of Touch and TouchscreenGesture events in
RenderWidgetHostInputEventRouter is insufficient in the case of non-
trivial CSS transformations and OOPIFs; specifically when scale and/or
rotation is involved.

This CL fixes that by using full transforms when they are available via
Viz hit testing.

Bug: 883508
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I53c163b0c942f0eb62d5bee76245003c0f032cfc
Reviewed-on: https://chromium-review.googlesource.com/c/1224453
Reviewed-by: Charlie Reis <creis@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: James MacLean <wjmaclean@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596826}
Former-commit-id: c2469abf7b94fa0d0303aa3615899eb4bc3deb36